// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders a disabled tab 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="rowTabDisabled"
  >
    One
  </a>
  <a
    class="rowTab"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders a tab with a href 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="rowTab"
    href="//example"
  >
    One
  </a>
  <a
    class="rowTab"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders a tab with an onClick 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="rowTab"
  >
    One
  </a>
  <a
    class="rowTab"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders an active tab 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="rowTabActive"
  >
    One
  </a>
  <a
    class="rowTab"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders basic tabs 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="rowTab"
  >
    One
  </a>
  <a
    class="rowTab"
  >
    Two
  </a>
</div>
`;
